# ANPR_ComputerVision

./: .dockerignore  .editorconfig  .env.example  .env.local.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CICD_IMPLEMENTATION_SUMMARY.txt  CONTAINERIZATION.md  CONTAINERIZATION_SUMMARY.txt  COST_OPTIMIZATION_STRATEGY.md  DOCKER_TROUBLESHOOTING.md  Dockerfile  Dockerfile.api  Dockerfile.worker  E2E_TEST_RESULTS.md  INDEX_DEVENV.md  LOCAL_SETUP.md  M1_EXECUTION_REPORT.md  M1_INGEST_ADAPTERS.md  M2_BASELINE_REPORT.md  M2_FULL_TRAINING_PLAN.md  M2_KAGGLE_EXECUTION_SUMMARY.md  M6_DAY1_SUMMARY.md  ML_SPEC.md  Makefile  Makefile.dev  PIPELINE.md  QUICK_REFERENCE.md  README.md  SECRETS.md  SECRETS_ROTATION.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIXES.md  SECURITY_FIXES_M6_TASK7.md  alembic.ini  baseline_eval_m2.json  demo.py  docker-compose.override.yml  docker-compose.prod.yml  (+6 more)
.claude/: settings.json
.claude/agents/: backend-engineer.md  bug-hunter-fixer.md  code-quality-linter.md  customer-tester.md  database-engineer.md  devops-architect.md  frontend-engineer-agent.md  integration-cleanup-engineer.md  ml-engineer.md  orchestration-facilitator.md  project-tracker.md  qa-test-engineer.md  security-threat-architect.md  ux-design-lead.md
.github/: PIPELINE_README.md  SECRETS_SETUP.md
.github/workflows/: ci.yml  deploy-prod.yml  deploy-staging.yml  deploy.yml  docker-build.yml  rollback-prod.yml
anpr_core/detect/: normalize.py  yolo_detector.py
anpr_core/ocr/: crnn_backend.py  fuser.py  paddle_backend.py
anpr_core/pipeline/: orchestrator.py  scheduler.py  voter.py
anpr_core/postproc/: gate.py  region_classifier.py
anpr_core/quality/: quality_gate.py
anpr_core/tracking/: bytetrack_wrapper.py
api/: auth.py  config.py  crypto.py  deps.py  encryption.py  exceptions.py  logging.py  main.py  rate_limiter.py  rbac.py  security.py  settings.py
api/privacy/: __init__.py  redactor.py
api/routers/: __init__.py  audit.py  auth.py  data.py  debug.py  ingest.py  review.py  settings.py  watchlist.py  watchlist_test.py  websocket.py
api/schemas/: __init__.py  auth.py  common.py  data.py
benchmarks/: eval.py  eval_m2.py  eval_m2_kaggle_complete.py  golden_sets.py  latency_m2_kaggle.py
config/: dev.yaml  retention.yaml
db/: __init__.py  alembic.ini  base.py  core.py  engine.py
db/migrations/: env.py
db/models/: __init__.py  audit_archive.py  (+3 more)
docs/: CICD_SETUP.md  COST_OPTIMIZATION_RUNBOOK.md  COST_OPTIMIZATION_STRATEGY.md  DEMO.md  DEPLOYMENT.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEV_ENVIRONMENT.md  DOCKER.md  DOCKER_TROUBLESHOOTING.md  E2E_TESTING.md  E2E_TEST_RESULTS.md  FRONTEND_ARCHITECTURE.md  INDEX.md  INDEX_DEVENV.md  INFRASTRUCTURE_DELIVERABLES.txt  LOCAL_SETUP.md  M11_LAMBDA_ROTATION_SUMMARY.md  M1_EXECUTION_REPORT.md  M1_INGEST_ADAPTERS.md  M2_BASELINE_REPORT.md  M2_DETECTOR_FINETUNE.md  M2_FULL_TRAINING_GUIDE.md  M2_FULL_TRAINING_PLAN.md  M2_KAGGLE_EXECUTION_SUMMARY.md  M2_PRODUCTION_SUMMARY.md  M6_DAY1_SUMMARY.md  M7_DAY2_SUMMARY.md  ML_SPEC.md  PIPELINE.md  QUICK_START_DEPLOY.md  RBAC.md  README_DEVENV.md  README_DOCKER.md  RUNBOOK_ROLLBACK.md  SECRETS_MANAGEMENT.md  SECRETS_ROTATION.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_FIXES_M6_TASK7.md  (+6 more)
ingest/: base.py  file.py  iphone.py  rtsp.py  webcam.py
lambda/: __init__.py  build_layer.sh  requirements.txt  rotate_secret.py
ops/: DEPLOYMENT_SERVER_SETUP.md  docker-compose.yml  init-db.sh
scripts/: check_metrics.sh  cost_monitoring.sh  demo.py  docker-build.sh  init_dev_env.py  monitor_deployment.sh  rollback_blue_green.sh  smoke_tests.sh  smoke_webcam.py  switch-traffic-to-blue.sh  switch-traffic-to-green.sh
terraform/: COST_BREAKDOWN.md  DEPLOYMENT_GUIDE.md  README.md  STRUCTURE.md  SUMMARY.md  main.tf  variables.tf  versions.tf
tests/: README.md  conftest.py  pytest.ini
training/: README.md
ui/: README.md  package-lock.json  package.json  vite.config.ts
workers/: README.md  __init__.py  celery_app.py  s3_utils.py  tasks.py  tasks_privacy.py
(+133 files in other folders)
